[gd_scene load_steps=4 format=3 uid="uid://ymy4h4ra784o"]

[ext_resource type="Texture2D" uid="uid://q2e1c5sdn7fh" path="res://Sprites/cardholder.png" id="1"]
[ext_resource type="Script" path="res://Scripts/LocationHolder.gd" id="1_8qxa4"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(122, 164)

[node name="Area2D" type="Area2D"]
script = ExtResource("1_8qxa4")

[node name="Label" type="Label" parent="."]
offset_left = -104.0
offset_top = -40.0
offset_right = 107.0
offset_bottom = 38.0
text = "put your 
location card 
here."
horizontal_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.32, 0.32)
texture = ExtResource("1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="LocationName" type="Label" parent="."]
visible = false
offset_left = -60.0
offset_top = -104.0
offset_right = 61.0
offset_bottom = -81.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -17.17
autoplay = true

[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Area2D_body_exited"]
